# Nodexel

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: application.cpp  application.hpp  editor_layout.cpp  editor_layout.hpp  main.cpp
src/core/: constants.hpp  types.hpp
src/graph/: node.hpp  node_graph.cpp  node_graph.hpp
src/graph/nodes/: color_quantize_node.cpp  color_quantize_node.hpp  input_node.cpp  input_node.hpp  output_node.cpp  output_node.hpp  pixelate_node.cpp  pixelate_node.hpp  rescale_node.cpp  rescale_node.hpp
src/pipeline/: image_buffer.hpp  pipeline_manager.cpp  pipeline_manager.hpp  texture.cpp  texture.hpp
src/pipeline/algorithms/: color_quantize_algo.hpp  pixelate_algo.hpp  rescale_algo.hpp
